Make use of Java17 features (#118)